k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: order
spec:
  selector:
    app: backend
  ports:
  - port: 8080
