k8s/traefik-ingroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: order-frontend
  namespace: order
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`order.bilarn.com`)
      kind: Rule
      services:
        - name: frontend
          port: 80
